--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
     <title>Vite App</title>
   </head>
   <body>
     <header>Cuanto tiempo falta para tu cumpleaños?</header>
     <main>
-      <div><input type="date"></div>
+      <div><input type="date" class="date"></div>
+      <div class="result"></div>
     </main>
     <footer><label for="Author">Breixo</label></footer>
     
