jodiendo el repositorio del breixo

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="main.js"></script>
     <title>Vite App</title>
   </head>
   <body>
-    <header>Cuanto tiempo falta para tu cumpleaños?</header>
+    <header><h1>Cuanto tiempo falta para tu cumpleaños?</h1></header>
     <main>
-      <div><input type="date" class="date"></div>
+      <div><input type="date" class="date" /></div>
       <div class="result"></div>
     </main>
-    <footer><label for="Author">Breixo</label></footer>
-    
+    <footer>
+      <label for="Author"><h2>Breixo</h2></label>
+    </footer>
   </body>
 </html>
