--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="result"></div>
     </main>
     <footer>
-      <label for="Author"><h2>Breixo</h2></label>
+      <label for="Author"><h2>Breixo Andrés</h2></label>
     </footer>
   </body>
 </html>
